[package]
name = "ferrite-example"
version = "0.1.0"
edition = "2021"

[lib]
name = "backend"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
ferrite = { package = "ferrite-core", path = "ferrite" }
futures = { version = "0.3.25", features = ["thread-pool"] }
macro_rules_attribute = "0.1.2"
log = "0.4"
env_logger = "0.9.1"

[workspace]
members = ["ferrite"]
