[package]
name = "ferrite-example-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
async-std = { version = "1.12.0", features = ["attributes"] }
epics-ca = "0.1.0"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_xoshiro = "0.6.0"
